macros/tests/compile_fail/package_builder_not_string.stderr
error: [melbi] builder attribute must be a string literal
 --> tests/compile_fail/package_builder_not_string.rs:5:27
  |
5 | #[melbi_package(builder = 123)]
  |                           ^^^
